# pytest-fixtureclass

./: .gitignore  pyproject.toml
examples/: fixtureclass.py
pytest_fixtureclass/: __init__.py  plugin.py
tests/: conftest.py  test_dynfixture_empty.py  test_dynfixture_filled.py  test_fixtureclass.py
