[tool.poetry]
name = "pytest-fixtureclass"
version = "0.1.0"
description = ""
authors = ["Zshoham <ShohamZarfti@gmail.com>"]
readme = "README.md"
packages = [{include = "pytest_fixtureclass"}]

[tool.poetry.dependencies]
python = "^3.8.2"
pytest = "^7.1.3"
makefun = "^1.15.0"

[tool.poetry.plugins.pytest11]
fixtureclass = 'pytest_fixtureclass.plugin'


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
